--- a/system.html
+++ b/system.html
@@ -90,7 +90,7 @@
     #music-hud { z-index: 9999; pointer-events: auto; }
     #music-hud * { pointer-events: auto; }
   </style>
-  <script src="js/music-config.js"></script>
+  <script src="js/music.js"></script>
 </head>
 <body>
   <!-- Hidden background audio (autoplay best-effort) -->
